--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "bower": "^1.6.5",
     "gulp": "^3.9.1",
+    "gulp-cache-bust": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-ng-annotate": "^1.1.0",
