pinned npm version in package.json

--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "ctdata-angular-template",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "^1.5.8",
-    "angular-animate": "^1.5.8",
+    "angular": "1.5.8",
+    "angular-animate": "1.5.8",
     "angular-loading": "git+https://github.com/darthwade/angular-loading.git#b56e77ab19f9203a54ecdbab03d41295e81ec943",
-    "angular-route": "^1.5.8",
-    "angular-sanitize": "^1.5.8",
-    "angular-tablescroll": "^2.0.1",
-    "angular-ui-bootstrap": "^2.2.0",
+    "angular-route": "1.5.8",
+    "angular-sanitize": "1.5.8",
+    "angular-tablescroll": "2.0.1",
+    "angular-ui-bootstrap": "2.2.0",
     "d3": "^3.5.6",
     "d3-jetpack": "^1.0.2",
-    "isteven-angular-multiselect": "^4.0.0",
-    "moment": "^2.15.2",
-    "ng-csv": "^0.3.6",
-    "ng-dialog": "^0.6.4",
-    "ng-lodash": "^0.2.3",
-    "simple-statistics": "^2.2.0",
+    "isteven-angular-multiselect": "4.0.0",
+    "moment": "2.15.2",
+    "ng-csv": "0.3.6",
+    "ng-dialog": "0.6.4",
+    "ng-lodash": "0.2.3",
+    "simple-statistics": "2.2.0",
     "spin": "0.0.1",
-    "tether": "^1.3.7",
-    "tether-tooltip": "^1.2.0"
+    "tether": "1.3.7",
+    "tether-tooltip": "1.2.0"
   },
   "devDependencies": {
     "bower": "^1.6.5",
